Fixed words not wrapping in comments

--- a/app/assets/stylesheets/landlorddetails.css
+++ b/app/assets/stylesheets/landlorddetails.css
@@ -106,7 +106,7 @@ td{
 	font-size:18px;
 	text-align:left;
 	width:525px;
-	word-break: break-all;
+	/*word-break: break-all;*/
 	word-wrap: break-word;
 }
 #reviewdelete{
